# polybar-modules

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install  typescript
.github/workflows/: ci.yml
arch-linux/: PKGBUILD  polybar-modules.hook  polybar-modules.install
src/: config.rs  main.rs  markup.rs  polybar_module.rs  theme.rs
src/polybar_module/: arch_updates.rs  autolock.rs  battery_mouse.rs  bluetooth.rs  cpu_freq.rs  cpu_top.rs  debian_updates.rs  gpu_nvidia.rs  home_power.rs  inference_usage.rs  internet_bandwidth.rs  market.rs  mod.rs  network_status.rs  notifications.rs  player.rs  progressbar_server.rs  pulseaudio.rs  syncthing.rs  syncthing_rest.rs  taskwarrior.rs  todotxt.rs  weather.rs  wttr.rs  xmonad.rs
