[package]
name = "polybar-modules"
version = "0.1.0"
authors = ["desbma <desbma@users.noreply.github.com>"]
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = { version = "1.0.89", default-features = false, features = ["backtrace", "std"] }
backoff = { version = "0.4.0", default-features = false }
bounded-vec-deque = { version = "0.1.1", default-features = false }
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std"] }
glob = { version = "0.3.1", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
itertools = { version = "0.13.0", default-features = false, features = ["use_std"] }
log = { version = "0.4.22", default-features = false, features = ["max_level_trace", "release_max_level_info"] }
macaddr = { version = "1.0.1", default-features = false, features = ["std"] }
mio = { version = "1.0.2", default-features = false, features = ["os-ext"] }
notify = { version = "6.1.1", default-features = false }
quick-xml = { version = "0.36.2", default-features = false, features = ["serialize"] }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
regex = { version = "1.11.0", default-features = false, features = ["std"] }
reqwest = { version = "0.12.8", default-features = false, features = ["native-tls", "blocking", "gzip"] }
scraper =  { version = "0.20.0", default-features = false }
serde =  { version = "1.0.210", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.128", default-features = false, features = ["std", "raw_value"] }
sha2 = { version = "0.10.8", default-features = false, features = ["std"] }
signal-hook = { version = "0.3.17", default-features = false, features = ["iterator"] }
simple_logger = { version = "5.0.0", default-features = false }
strip-ansi-escapes = { version = "0.2.0", default-features = false }
structopt = { version = "0.3.26", default-features = false }
sysinfo = { version = "0.17.5", default-features = false }
tasks = { git = "https://github.com/desbma/todo", rev = "2e57189cded6b0ed84f5afb1a93c86698763a324" }
toml = { version = "0.8.19", default-features = false, features = ["parse"] }
tungstenite = { version = "0.24.0", default-features = false, features = ["native-tls", "handshake"] }
xdg = { version = "2.5.2", default-features = false }

[dev-dependencies]
tempfile = { version = "3.13.0", default-features = false }

[lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html
explicit_outlives_requirements = "warn"
missing_docs = "warn"
non_ascii_idents = "deny"
redundant-lifetimes = "warn"
single-use-lifetimes = "warn"
unit-bindings = "warn"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
unused-lifetimes = "warn"
unused-qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# below lints are from clippy::restriction, and assume clippy >= 1.83
# https://rust-lang.github.io/rust-clippy/master/index.html#/?levels=allow&groups=restriction
allow_attributes = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
empty_enum_variants_with_brackets = "warn"
expect_used = "warn"
field_scoped_visibility_modifiers = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
infinite_loop = "warn"
lossy_float_literal = "warn"
# missing_docs_in_private_items = "warn"
mixed_read_write_in_expression = "warn"
multiple_inherent_impl = "warn"
needless_raw_strings = "warn"
non_zero_suggestions = "warn"
panic = "warn"
pathbuf_init_then_push = "warn"
pub_without_shorthand = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_inside_block = "warn"
shadow_unrelated = "warn"
str_to_string = "warn"
string_slice = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
# unwrap_used = "warn"
verbose_file_reads = "warn"
