[package]
name = "polybar-modules"
version = "0.1.0"
authors = ["desbma <desbma@users.noreply.github.com>"]
rust-version = "1.88"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = { version = "1.0.98", default-features = false, features = ["backtrace", "std"] }
backon = { version = "1.5.1", default-features = false, features = ["std", "std-blocking-sleep"] }
bounded-vec-deque = { version = "0.1.1", default-features = false }
chrono = { version = "0.4.41", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.40", default-features = false, features = ["std", "derive", "help"] }
glob = { version = "0.3.2", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
itertools = { version = "0.14.0", default-features = false, features = ["use_std"] }
log = { version = "0.4.27", default-features = false, features = ["max_level_trace", "release_max_level_info"] }
macaddr = { version = "1.0.1", default-features = false, features = ["std"] }
mio = { version = "1.0.4", default-features = false, features = ["os-ext"] }
notify = { version = "8.0.0", default-features = false }
quick-xml = { version = "0.37.5", default-features = false, features = ["serialize"] }
rand = { version = "0.9.1", default-features = false, features = ["std", "thread_rng"] }
regex = { version = "1.11.1", default-features = false, features = ["std"] }
scraper =  { version = "0.23.1", default-features = false }
serde =  { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.140", default-features = false, features = ["std", "raw_value"] }
sha2 = { version = "0.10.9", default-features = false, features = ["std"] }
signal-hook = { version = "0.3.18", default-features = false, features = ["iterator"] }
simple_logger = { version = "5.0.0", default-features = false }
strip-ansi-escapes = { version = "0.2.1", default-features = false }
sysinfo = { version = "0.35.2", default-features = false, features = ["network"] }
tasks = { git = "https://github.com/desbma/todo", rev = "13d7329c37b6e1ad788add9e3f3d0fd506d79d32" }
thiserror = { version = "2.0.12", default-features = false, features = ["std"] }
tokio-modbus = { version = "0.16.1", default-features = false, features = ["tcp-sync"] }
toml = { version = "0.8.23", default-features = false, features = ["parse"] }
tungstenite = { version = "0.27.0", default-features = false, features = ["native-tls", "handshake"] }
ureq = { version = "3.0.12", default-features = false, features = ["gzip", "native-tls"] }
url = { version = "2.5.4", default-features = false, features = ["std"] }
xdg = { version = "3.0.0", default-features = false }

[dev-dependencies]
tempfile = { version = "3.20.0", default-features = false }

[lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html
explicit_outlives_requirements = "warn"
missing_docs = "warn"
non_ascii_idents = "deny"
redundant-lifetimes = "warn"
single-use-lifetimes = "warn"
unit-bindings = "warn"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
unused-lifetimes = "warn"
unused-qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unnecessary_debug_formatting = "allow"
# below lints are from clippy::restriction
# https://rust-lang.github.io/rust-clippy/master/index.html#/?levels=allow&groups=restriction
allow_attributes = "warn"
as_pointer_underscore = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
empty_enum_variants_with_brackets = "warn"
expect_used = "warn"
field_scoped_visibility_modifiers = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
indexing_slicing = "warn"
infinite_loop = "warn"
implicit_clone = "warn"
lossy_float_literal = "warn"
map_with_unused_argument_over_ranges = "warn"
# missing_docs_in_private_items = "warn"
mixed_read_write_in_expression = "warn"
module_name_repetitions = "warn"
multiple_inherent_impl = "warn"
mutex_integer = "warn"
needless_raw_strings = "warn"
non_zero_suggestions = "warn"
panic = "warn"
pathbuf_init_then_push = "warn"
precedence_bits = "warn"
pub_without_shorthand = "warn"
# redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
ref_patterns = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
semicolon_inside_block = "warn"
shadow_unrelated = "warn"
str_to_string = "warn"
string_slice = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
# unwrap_used = "warn"
verbose_file_reads = "warn"
